[package]
name = "tuemensa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
prettytable = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
tokio = { version = "1", features = ["full"] }
