[package]
name = "tuemensa"
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["structix"]
description = "A simple command-line tool designed to retrieve the current meal plans for the canteens at Eberhard Karls Universität Tübingen."
repository = "https://github.com/STRUCTiX/tuemensa"
readme = "README.md"
keywords = ["cli", "canteen", "university", "tuebingen"]

exclude = ["screenshots"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
prettytable = "0.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
ureq = { version = "*", features = ["json", "tls"] }
